# ESP32

./: CMakeLists.txt  ESP32_Sandbox.files  ESP32_Sandbox.includes  README.md  esp32.ino  flash.sh  sandbox.cpp  sandbox.hpp  sdkconfig
ESP32_BLINK/: CMakeLists.txt  sdkconfig
ESP32_BLINK/include/: gpio.h  main.h
ESP32_BLINK/main/: CMakeLists.txt  main.cpp
ESP32_BLINK/source/: gpio.cpp  nvs32.cpp
ESP32_WIFI/: sdkconfig
ESP32_WIFI/main/: CMakeLists.txt  main.cpp
ESP32_WIFI/main/inc/: Led.hpp  WifiCommunicator.hpp  logging.h  wifi_driver.hpp
ESP32_WIFI/main/src/: Led.cpp  WifiCommunicator.cpp  wifi_driver.cpp
esp-idf-telegram-bot/main/src/: rest_handler.c  wifi_handler.c
esp-idf-uart2bt/ble/: sdkconfig
esp-idf-uart2bt/classic_bt/: sdkconfig
esp32_nat_router/: sdkconfig
include/: TaskMessaging.h  main.h  nvs32.h  systeminfo.h
main/: CMakeLists.txt  main.cpp  systeminfo.cpp
main/inc/: WifiCommunicator.hpp  thread_logger.hpp
main/src/: WifiCommunicator.cpp  thread_logger.cpp
