idf_component_register(SRCS "main.cpp"
                            "src/thread_logger.cpp"
                            "src/WifiCommunicator.cpp"
                            "src/wifi_driver.cpp"
                            "src/gpio.cpp" 
                            "src/Led.cpp"    
                    INCLUDE_DIRS "inc")
